--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -41,109 +41,16 @@
     <div class="widthOfColumn">
       <div class="mdl-layout__drawer mdl-color--amber-A700">
         <nav class="mdl-navigation">
-          <div class="options">
-            <br /><br /><br />
-
-            <!----  <span class="mdl-layout-title">
-            My Interests
-          </span>
-          <br /> -->
-
-            <!-- List of content currently subscribed to. -->
-            <!--
-          <span
-            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-          >
-            <span class="mdl-chip__text">Languages</span>
-            <button
-              type="button"
-              class="mdl-chip__action show-language-subscriber"
-            >
-              <i class="material-icons mdl-color-text--amber">add_circle</i>
-            </button>
-          </span>
-          <div id="languagesList"></div>
-
-          <div style="font-size: xx-small">&nbsp;</div> -->
-            <div class="interestButton">
-              <span
-                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-              >
-                <button
-                  type="button"
-                  class="mdl-chip__action show-topic-subscriber"
-                >
-                  <span class="mdl-chip__text">Interests</span>
-                  <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-
-            <div id="searchesList"></div>
-            <div id="topicsList">
-              <div id="any_topic" style="display:none;">
-                &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
-                  >Showing all Interests...</i
-                >
-              </div>
-            </div>
-
-            <div style="font-size: xx-small">&nbsp;</div>
-            <div class="interestButton">
-              <span
-                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-              >
-                <button
-                  type="button"
-                  class="mdl-chip__action show-filter-subscriber"
-                >
-                  <span class="mdl-chip__text"><nobr>Non-Interests</nobr></span>
-                  <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-            <div id="searchesFilterList"></div>
-            <div id="topicsFilterList"></div>
-
-            <div style="font-size: xx-small">&nbsp;</div>
-
-            <br />
-            <!--- <span class="mdl-layout-title">
-            Search
-          </span>-->
-            <div class="seachField">
-              <div
-                class="mdl-textfield mdl-js-textfield mdl-textfield--expandable"
-              >
-                <label
-                  class="mdl-button mdl-js-button mdl-button--icon"
-                  for="search-expandable"
-                >
-                  <!---   <i class="material-icons">search</i>-->
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                  <input
-                    class="mdl-textfield__input"
-                    type="text"
-                    id="search-expandable"
-                    placeholder="Search all articles"
-                  />
-                  <!--<label class="mdl-textfield__label" for="search-expandable"
-                >Search...</label
-              >-->
-                </div>
-              </div>
-            </div>
-          </div>
+     
           <!-- Sorting buttons-->
           <div class="sortingCategories">
             <div class="wordsSorting">
-              <div class="levelLable">Words</div>
-              <div class="triangle"></div>
+              <div class="wordLabel">words</div>
+              <div id="triangleWords" class="triangle"></div>
             </div>
             <div class="levelSorting">
-              <div class="wordLable">Level</div>
-              <div class="triangle"></div>
+              <div class="levelLabel">level</div>
+              <div id="triangleLevel" class="triangle"></div>
             </div>
           </div>
         </nav>
@@ -238,7 +145,7 @@
 
   <!-- Template for a cohort article link. -->
   <script id="cohort-articleLink-template" type="text/template">
-    <li class="fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
+    <li class="{% raw %}{{ wordCount }}{% endraw %} {% raw %}{{articleDifficulty}}{% endraw %} fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}" 
         articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
             <div class="articleLinkHeader">
