--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -199,33 +199,38 @@
           <!-- List of articles -->
           <ul id="articleLinkList" class="articleLinkList"></ul>
           <br />
+          <!--
           <div id="emptyArticleListImage" class="emptyPage">
-            <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+           <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
               alt="Not subscribed to any feeds..." />
           </div>
           <div class="loader">
             <img class="eleph" src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
               alt="Loading..." />
-          </div>
+          </div>-->
 
       </section>
       <section class="mdl-layout__tab-panel" id="starred">
         <div class="page-content">
           <ul id="starredArticleList" class="articleLinkList"></ul>
+          <!-- 
           <div id="emptyStarredArticleListImage" class="emptyPage">
             <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
               alt="Not subscribed to any feeds..." />
           </div>
+          -->
         </div>
       </section>
       <section class="mdl-layout__tab-panel" id="cohort">
         <div class="page-content">
           <ul id="cohortArticleList" class="articleLinkList"></ul>
+          <!-- 
           <div id="emptyCohortArticleListImage" class="emptyPage">
             <p>There are no articles in your class</p>
             <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
               alt="Not subscribed to any feeds..." />
           </div>
+          -->
         </div>
       </section>
     </main>
